--- a/templates/shop.html
+++ b/templates/shop.html
@@ -7,57 +7,128 @@
 #}
 {% block script %}
     <script>
+        var page_num;
+
         function generate(){
-            $("#search-box").keyup(function () {
-                $.ajax({
-                    url: "/searchItemByName",
-                    type: "get",
-                    data: {
-                        phone:" {{ phone }}",
-                        keyword: $("#search-box").val(),
-                        page_num: page_num,
-                    },
-                    success: function (data) {
-                    {#    创建item内容#}
-                    }
-                })
-            })
+
+            $(".item-box").empty();
+            $(".prev").empty();
+            $(".next").empty();
 
             $.ajax({
-                url:"/hasNextPage",
-                type:"get",
-                data: {
+                    url: "/shop/searchItemByName",
+                    type: "get",
+                    contentType: "application/json",
+                    dataType: "json",
+                    data: {
                         phone: phone,
                         keyword: $("#search-box").val(),
                         page_num: page_num,
                     },
                     success: function (data) {
+                        for (let i=0; i<data.length; i++){
+                            const item = data[i];
+
+                            const item_box = document.createElement("div");
+                            const item_button = document.createElement("button");
+                            item_box.setAttribute("class", "item");
+                            item_button.onclick = function (){
+                                $.ajax({
+                                    url:"/shop/isItemMatchSeller",
+                                    type: "get",
+                                    contentType: "application/json",
+                                    dataType: "json",
+                                    data:{
+                                        product_id:item.product_id,
+                                        phone: phone
+                                    },
+                                    success:function (data){
+                                        window.location.replace("/item?product_id="+data.product_id+"&belong="+data.belong)
+                                    }
+                                })
+                            }
+                            $(".item-box").append(item_box);
+                            item_box.append(item_button);
+
+                            const img_box = document.createElement("div");
+                            img_box.setAttribute("class", "img-box");
+                            const img = document.createElement("img");
+                            img.setAttribute("src", item.image_src);
+                            item_button.append(img_box);
+                            img_box.append(img);
+
+                            const price_box = document.createElement("div");
+                            img_box.setAttribute("class", "price-box");
+                            const price = document.createElement("span");
+                            price.innerText = item.price;
+                            item_button.append(price_box);
+                            price_box.append(price);
+
+                            const name_box = document.createElement("div");
+                            img_box.setAttribute("class", "name-box");
+                            const name = document.createElement("span");
+                            name.innerText = item.product_name;
+                            item_button.append(name_box);
+                            name_box.append(name);
+
+                            const rating_box = document.createElement("div");
+                            img_box.setAttribute("class", "rating-box");
+                            const rating = document.createElement("span");
+                            rating.innerText = item.rating;
+                            item_button.append(rating_box);
+                            rating_box.append(rating);
+
+                        }
+                    }
+                })
+
+            $.ajax({
+                url:"/shop/hasNextPage",
+                type:"get",
+                contentType: "application/json",
+                dataType: "json",
+                data: {
+                    phone: phone,
+                    keyword: $("#search-box").val(),
+                    page_num: page_num,
+                },
+                success: function (data) {
+                    if (data.has_next) {
                         var button = document.createElement("button");
                         button.setAttribute("class", "page-button");
-                        button.click(function (){
+                        button.innerText = "next";
+                        button.onclick = function () {
                             page_num++;
-                            generate();
-                        })
+                            generate()
+                        }
                         $(".next").append(button);
                     }
+                }
             })
 
             if (page_num>1){
                 var button = document.createElement("button");
                 button.setAttribute("class", "page-button");
-                button.click(function (){
+                button.innerText = "prev";
+                button.onclick = function () {
                     page_num--;
-                    generate();
-                })
+                    generate()
+                }
                 $(".prev").append(button);
             }
         }
 
-
-        var page_num;
-        window.onload = function () {
-            page_num = 0;
+        $(document).on("sessionLoaded", function() {
             generate();
+        });
+
+        window.onload = function () {
+            page_num = 1;
+            {#generate();#}
+
+            $("#search-box").keyup(function (){
+                generate();
+            })
 
 
         }
@@ -66,6 +137,10 @@
 
 {% block css %}
     /static/css/shop.css
+{% endblock %}
+
+{% block search_box %}
+    <input type="search" id="search-box" placeholder="输入商品">
 {% endblock %}
 
 {% block main %}
