--- a/templates/item.html
+++ b/templates/item.html
@@ -106,19 +106,27 @@
     }
 
     function render_self_comment() {
+
         const self_rating_div = document.createElement("div");
-        self_rating_div.setAttribute("class", "self-rating-box");
         const self_rating = document.createElement("input");
+
+        self_rating_div.setAttribute("class", "self-rating-box");
         self_rating.setAttribute("class", "self-rating");
         self_rating.setAttribute("placeHolder", "rating");
         self_rating.setAttribute("type", "number");
+
+
         const self_content_div = document.createElement("div");
-        self_content_div.setAttribute("class", "self-content-box");
         const self_content = document.createElement("input");
+
+        self_content_div.setAttribute("class", "self-content-box");
         self_content.setAttribute("class", "self-content");
         self_content.setAttribute("placeHolder", "content");
         self_rating.setAttribute("type", "text");
+
+
         const self_content_button = document.createElement("button");
+
         self_content_button.setAttribute("id", "self-content-button");
         self_content_button.innerText = "Submit->"
         self_content_button.onclick = function () {
@@ -138,6 +146,7 @@
             })
         }
         const comment_box = $(".self-comment-box");
+
         self_content_div.append(self_content);
         self_rating_div.append(self_rating);
         comment_box.append(self_rating_div);
@@ -155,23 +164,41 @@
             },
             success: function (data) {
                 for (let i = 0; i < data.length; i++) {
+
                     const comment = data[i];
                     const comment_div = document.createElement("div");
                     comment_div.setAttribute("class", "comment");
 
+
+                    const comment_owner_div = document.createElement("div");
+                    const comment_owner_span = document.createElement("span");
+
+                    comment_owner_div.setAttribute("class", "comment-rating");
+                    comment_owner_span.innerText = comment.user_name;
+
+                    comment_owner_div.append(comment_owner_span);
+                    comment_div.append(comment_owner_div);
+
+
                     const comment_rating_div = document.createElement("div");
-                    comment_rating_div.setAttribute("class", "comment-rating");
                     const comment_rating = document.createElement("span");
+
+                    comment_rating_div.setAttribute("class", "comment-rating");
                     comment_rating.innerText = comment.rating;
+
                     comment_rating_div.append(comment_rating);
                     comment_div.append(comment_rating_div);
 
+
                     const comment_content_div = document.createElement("div");
-                    comment_content_div.setAttribute("class", "comment-text");
                     const comment_content = document.createElement("span");
+
+                    comment_content_div.setAttribute("class", "comment-text");
                     comment_content.innerText = comment.content;
+
                     comment_content_div.append(comment_content);
                     comment_div.append(comment_content_div);
+
 
                     const comment_text = document.createComment("div");
                     comment_text.innerText = comment.text;
@@ -181,7 +208,8 @@
             }
         })
     }
-    window.onload = function () {
+
+    $(document).on("sessionLoaded", function() {
 
         render_item_data();
         {#基础comment#}
@@ -205,9 +233,11 @@
         {#buyer#}
 {#    评论悬浮框#}
         if (type === "1"){
+            console.log("ok")
             render_self_comment();
         }
-    }
+        });
+
     </script>
 {% endblock %}
 
