--- a/templates/item.html
+++ b/templates/item.html
@@ -106,19 +106,29 @@
     }
 
     function render_self_comment() {
+        const comment_box = $(".self-comment-box");
+        comment_box.empty();
+
         const self_rating_div = document.createElement("div");
-        self_rating_div.setAttribute("class", "self-rating-box");
         const self_rating = document.createElement("input");
+
+        self_rating_div.setAttribute("class", "self-rating-box");
         self_rating.setAttribute("class", "self-rating");
         self_rating.setAttribute("placeHolder", "rating");
         self_rating.setAttribute("type", "number");
+
+
         const self_content_div = document.createElement("div");
-        self_content_div.setAttribute("class", "self-content-box");
         const self_content = document.createElement("input");
+
+        self_content_div.setAttribute("class", "self-content-box");
         self_content.setAttribute("class", "self-content");
         self_content.setAttribute("placeHolder", "content");
         self_rating.setAttribute("type", "text");
+
+
         const self_content_button = document.createElement("button");
+
         self_content_button.setAttribute("id", "self-content-button");
         self_content_button.innerText = "Submit->"
         self_content_button.onclick = function () {
@@ -134,10 +144,16 @@
                     content: self_content.value,
                     rating: self_rating.value,
                     product_id: "{{ product_id }}"
+                },
+                success:function (data){
+                    if (data.success){
+                        render_self_comment();
+                    }else {
+                        alert(data.message)
+                    }
                 }
             })
         }
-        const comment_box = $(".self-comment-box");
         self_content_div.append(self_content);
         self_rating_div.append(self_rating);
         comment_box.append(self_rating_div);
