--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@ type:当前用户类型，1为买家，0为卖家
                         a.setAttribute("href", "/buyerInfo");
                         a.innerText = name;
                     }else{
-                        a.setAttribute("href", "/");
+                        a.setAttribute("href", "/login");
                         a.innerText = "Login";
                     }
                     user_box.append(a)
