--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -255,7 +255,7 @@ name:当前用户name
                     const item_name = document.createElement("span");
 
                     item_name_div.setAttribute("class", "item-name-box");
-                    item_name.setAttribute("src", item.product_name);
+                    item_name.innerText = item.product_name;
 
                     item_name_div.append(item_name);
                     item_div.append(item_name_div);
@@ -264,7 +264,7 @@ name:当前用户name
                     const item_quantity = document.createElement("span");
 
                     item_quantity_div.setAttribute("class", "item-quantity-box");
-                    item_quantity.setAttribute("src", item.purchase_quantity);
+                    item_quantity.innerText = item.purchase_quantity;
 
                     item_quantity_div.append(item_quantity);
                     item_div.append(item_quantity_div);
@@ -273,7 +273,7 @@ name:当前用户name
                     const item_time = document.createElement("span");
 
                     item_time_div.setAttribute("class", "item-time-box");
-                    item_time.setAttribute("src", item.purchase_time);
+                    item_time.innerText = item.purchase_time;
 
                     item_time_div.append(item_time);
                     item_div.append(item_time_div);
@@ -282,7 +282,7 @@ name:当前用户name
                     const item_price = document.createElement("span");
 
                     item_price_div.setAttribute("class", "item-price-box");
-                    item_price.setAttribute("src", item.purchase_price);
+                    item_price.innerText = item.total_price;
 
                     item_price_div.append(item_price);
                     item_div.append(item_price_div);
