--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,9 @@ type:当前用户类型，1为买家，0为卖家
 </div>
 <div class="main">
     {% block main %}{% endblock %}
+<div class="back-button-box">
+    <button class="back-button" onclick="history.back()"></button>
+</div>
 </div>
 </body>
 </html>
