--- a/templates/sellerInfo.html
+++ b/templates/sellerInfo.html
@@ -19,7 +19,7 @@ name:当前用户name
 {% block script %}
     <script>
 
-    const body = $(".body")
+    const container = $(".container")
     $(document).on("sessionLoaded", function() {
         
         info();
@@ -33,7 +33,7 @@ name:当前用户name
     });
     function info(){
         {#清除dom#}
-        body.innerText='';
+        container.innerText='';
 
         $.ajax({
             url:"/seller/sellerInfo",
@@ -56,7 +56,7 @@ name:当前用户name
                 name_input.setAttribute("id", "name");
                 
                 name_div.append(name_input);
-                body.append(name_div);
+                container.append(name_div);
 
                 const phone_div = document.createElement("div");
                 const phone_input = document.createElement("input");
@@ -68,7 +68,7 @@ name:当前用户name
                 phone_input.setAttribute("id", "phone");
                 
                 phone_div.append(phone_input);
-                body.append(phone_div);
+                container.append(phone_div);
 
                 const introduction_div = document.createElement("div");
                 const introduction_input = document.createElement("input");
@@ -80,7 +80,7 @@ name:当前用户name
                 introduction_input.setAttribute("id", "introduction");
                 
                 introduction_div.append(introduction_input);
-                body.append(introduction_div);
+                container.append(introduction_div);
 
                 const password_div = document.createElement("div");
                 const password_input = document.createElement("input");
@@ -92,7 +92,7 @@ name:当前用户name
                 password_input.setAttribute("id", "password");
                 
                 password_div.append(password_input);
-                body.append(password_div);
+                container.append(password_div);
                 
                 const submit_div = document.createElement("div");
                 const submit_button = document.createElement("button");
@@ -113,7 +113,7 @@ name:当前用户name
                 }
                 
                 submit_div.append(submit_button);
-                body.append(submit_div);
+                container.append(submit_div);
             }
         })
 
@@ -121,49 +121,59 @@ name:当前用户name
     }
     function add(){
         {#清除dom#}
-        body.innerText='';
+        container.innerText='';
 
         const item_name = "";
         const item_name_div = document.createElement("div");
+        const item_name_input = document.createElement("input");
+        
         item_name_div.setAttribute("class", "add-div");
         item_name_div.setAttribute("id", "item_name-div");
-        const item_name_input = document.createElement("input");
         item_name_input.setAttribute("id", "item_name");
+        
         item_name_div.append(item_name_input);
-        body.append(item_name_div);
+        container.append(item_name_div);
 
         const src_div = document.createElement("div");
+        const src_input = document.createElement("input");
+        
         src_div.setAttribute("class", "add-div");
         src_div.setAttribute("id", "src-div");
-        const src_input = document.createElement("input");
         src_input.setAttribute("id", "src");
+        
         src_div.append(src_input);
-        body.append(src_div);
+        container.append(src_div);
 
         const storage_div = document.createElement("div");
+        const storage_input = document.createElement("input");
+        
         storage_div.setAttribute("class", "add-div");
         storage_div.setAttribute("id", "storage-div");
-        const storage_input = document.createElement("input");
         storage_input.setAttribute("id", "storage");
+        
         storage_div.append(storage_input);
-        body.append(storage_div);
+        container.append(storage_div);
 
         const introduction_div = document.createElement("div");
+        const introduction_input = document.createElement("input");
+        
         introduction_div.setAttribute("class", "add-div");
         introduction_div.setAttribute("id", "introduction-div");
-        const introduction_input = document.createElement("input");
         introduction_input.setAttribute("id", "introduction");
+        
         introduction_div.append(introduction_input);
-        body.append(introduction_div);
+        container.append(introduction_div);
 
         const price_div = document.createElement("div");
         const price_input = document.createElement("input");
+        
         price_div.setAttribute("class", "add-div");
         price_div.setAttribute("id", "price-div");
         price_input.setAttribute("type", "price");
         price_input.setAttribute("id", "price");
+        
         price_div.append(price_input);
-        body.append(price_div);
+        container.append(price_div);
 
         const submit_div = document.createElement("div");
         submit_div.onclick = function (){
@@ -185,4 +195,8 @@ name:当前用户name
         }
     }
     </script>
+{% endblock %}
+
+{% block body %}
+    <div class="container"></div>
 {% endblock %}
