--- a/templates/register.html
+++ b/templates/register.html
@@ -22,7 +22,7 @@ register
                 user_type: user_type,
             }),
             success:function (data){
-                if(data.success==="true"){
+                if(data.success){
                     window.location.replace("/");
                 } else {
                     alert(data.message);
